@@ -32,6 +32,12 @@ jobs:
     clean: true
     submodules: recursive
     persistCredentials: True
+  - task: JavaToolInstaller@0
+    displayName: Use Java 11
+    inputs:
+      versionSpec: '11'
+      jdkArchitectureOption: x64
+      jdkSourceOption: PreInstalled
   - task: CmdLine@1
     displayName: Set Office MVN Access Token in Environment
     inputs:
@@ -67,8 +73,8 @@ jobs:
     inputs:
       tasks: clean adal:assembleLocal
       publishJUnitResults: false
-      jdkArchitecture: x86
-      sqAnalysisBreakBuildIfQualityGateFailed: false
+      jdkArchitecture: x64
+      jdkVersion: 1.11
 - job: lint
   displayName: Lint
   cancelTimeoutInMinutes: 1
@@ -87,6 +93,7 @@ jobs:
     inputs:
       tasks: clean adal:lintLocalDebug
       publishJUnitResults: false
+      jdkVersion: 1.11
 
 - job: spotbugs
   displayName: SpotBugs
